--- a/main.ipynb
+++ b/main.ipynb
@@ -12992,11 +12992,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[10:33:45] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Identity of the Edgar REST client set to <span style=\"font-weight: bold\">[</span>Ger Sen wilsenp@gmail.com<span style=\"font-weight: bold\">]</span>                <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">core.py:154</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[07:43:38] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Identity of the Edgar REST client set to <span style=\"font-weight: bold\">[</span>Ger Sen wilsenp@gmail.com<span style=\"font-weight: bold\">]</span>                <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">core.py:154</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[2;36m[10:33:45]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Identity of the Edgar REST client set to \u001b[1m[\u001b[0mGer Sen wilsenp@gmail.com\u001b[1m]\u001b[0m                \u001b[2mcore.py\u001b[0m\u001b[2m:\u001b[0m\u001b[2m154\u001b[0m\n"
+       "\u001b[2;36m[07:43:38]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Identity of the Edgar REST client set to \u001b[1m[\u001b[0mGer Sen wilsenp@gmail.com\u001b[1m]\u001b[0m                \u001b[2mcore.py\u001b[0m\u001b[2m:\u001b[0m\u001b[2m154\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -13198,6 +13198,35 @@
     "                        \"total_holding\": int(data.primary_form_information.summary_page.total_holdings)\n",
     "                        })\n",
     "# nc.batch_upsert(target_table=\"form_13f_filing\", records=filing_data, conflict_columns=['filing_id'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Query executed successfully.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "2349"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "institution_profle_data = nc.select_query(\"SELECT cik FROM institution_profile\")\n",
+    "all_cik = [entry['cik'] for entry in institution_profle_data]\n",
+    "all_cik.index(1585047)"
    ]
   },
   {
