--- a/main.ipynb
+++ b/main.ipynb
@@ -12992,11 +12992,11 @@
     {
      "data": {
       "text/html": [
-       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[07:43:38] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Identity of the Edgar REST client set to <span style=\"font-weight: bold\">[</span>Ger Sen wilsenp@gmail.com<span style=\"font-weight: bold\">]</span>                <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">core.py:154</span>\n",
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"><span style=\"color: #7fbfbf; text-decoration-color: #7fbfbf\">[14:35:49] </span><span style=\"color: #000080; text-decoration-color: #000080\">INFO    </span> Identity of the Edgar REST client set to <span style=\"font-weight: bold\">[</span>Ger Sen wilsenp@gmail.com<span style=\"font-weight: bold\">]</span>                <span style=\"color: #7f7f7f; text-decoration-color: #7f7f7f\">core.py:154</span>\n",
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[2;36m[07:43:38]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Identity of the Edgar REST client set to \u001b[1m[\u001b[0mGer Sen wilsenp@gmail.com\u001b[1m]\u001b[0m                \u001b[2mcore.py\u001b[0m\u001b[2m:\u001b[0m\u001b[2m154\u001b[0m\n"
+       "\u001b[2;36m[14:35:49]\u001b[0m\u001b[2;36m \u001b[0m\u001b[34mINFO    \u001b[0m Identity of the Edgar REST client set to \u001b[1m[\u001b[0mGer Sen wilsenp@gmail.com\u001b[1m]\u001b[0m                \u001b[2mcore.py\u001b[0m\u001b[2m:\u001b[0m\u001b[2m154\u001b[0m\n"
       ]
      },
      "metadata": {},
@@ -13202,7 +13202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -13215,10 +13215,10 @@
     {
      "data": {
       "text/plain": [
-       "2349"
+       "3499"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -13226,7 +13226,8 @@
    "source": [
     "institution_profle_data = nc.select_query(\"SELECT cik FROM institution_profile\")\n",
     "all_cik = [entry['cik'] for entry in institution_profle_data]\n",
-    "all_cik.index(1585047)"
+    "# all_cik.index(1585047)\n",
+    "all_cik.index(1530237)"
    ]
   },
   {
